[package]
name = "item_hotkey"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
eframe = "0.32.1"
egui = "0.32.1"
keyvalues-serde = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
vtubestudio = "0.9.0"
